Fix bug with overlapped register/signup forms.

--- a/themes/openy_themes/openy_campaign_theme/scss/modules/_page.scss
+++ b/themes/openy_themes/openy_campaign_theme/scss/modules/_page.scss
@@ -345,6 +345,7 @@ body {
     border-radius: 5px;
     padding: 40px;
     margin-top: 40px;
+    overflow: hidden;
     .button {
       width: 100%;
     }
